# AoC2021

./: Cargo.toml  out
aoc/: Cargo.toml
aoc/src/: main.rs  parse.rs  traits.rs
aoc/src/years/: mod.rs
aoc/src/years/year2021/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
aoc/src/years/year2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs
aoc/src/years/year2025/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs
macros/proc/: Cargo.toml
macros/proc/src/: lib.rs
macros/rules/src/: lib.rs
src/: macros.rs  main.rs  parse.rs  traits.rs  util.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/years/: mod.rs
src/years/year2021/: day05.rs  day08.rs  day10.rs  day11.rs  day12.rs  day16.rs  day20.rs
src/years/year2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs
