[package]
name = "aoc"
version = "0.1.0"
edition = "2024"

[dependencies]
proc = { workspace = true }
rules = { workspace = true }
anyhow = "1.0"
atoi = "0.4"
chrono = "0.4"
concat-with = "0.2"
ndarray = { version="0.17", features=["rayon"] }
nom = "7"
itertools = "0.10"
paste = "1.0"
priority-queue = "1.2"
rayon = "1.5"
seq-macro = "0.3"
